--- a/web/src/i18n/locales/en.json
+++ b/web/src/i18n/locales/en.json
@@ -257,6 +257,11 @@
   "settings": {
     "title": "Settings",
     "description": "Configure your account, preferences, and system settings",
+    "adminSettings": "Global Settings",
+    "adminSettingsDescription": "Configure global system settings (admin only)",
+    "organizationSettings": "Organization Settings",
+    "organizationSettingsDescription": "Configure settings for your organization",
+    "globalSettings": "Global Settings",
     "profile": "Profile",
     "email": "Email",
     "storage": "Storage",
@@ -611,6 +616,7 @@
     "templates": "Templates",
     "organizations": "Organizations",
     "system": "System",
+    "administrator": "Administrator",
     "settings": "Settings",
     "expandSidebar": "Expand sidebar",
     "collapseSidebar": "Collapse sidebar",
