--- a/web/src/i18n/locales/es.json
+++ b/web/src/i18n/locales/es.json
@@ -253,6 +253,11 @@
   "settings": {
     "title": "Configuración",
     "description": "Configure su cuenta, preferencias y configuraciones del sistema",
+    "adminSettings": "Configuración Global",
+    "adminSettingsDescription": "Configure la configuración global del sistema (solo administradores)",
+    "organizationSettings": "Configuración de la Organización",
+    "organizationSettingsDescription": "Configure la configuración de su organización",
+    "globalSettings": "Configuración Global",
     "profile": "Perfil",
     "email": "Correo electrónico",
     "storage": "Almacenamiento",
@@ -554,6 +559,7 @@
     "templates": "Plantillas",
     "organizations": "Organizaciones",
     "system": "Sistema",
+    "administrator": "Administrador",
     "settings": "Configuración",
     "expandSidebar": "Expandir barra lateral",
     "collapseSidebar": "Contraer barra lateral",
