--- a/web/src/i18n/locales/fr.json
+++ b/web/src/i18n/locales/fr.json
@@ -257,6 +257,11 @@
     "general": "Général",
     "generalSettings": "Paramètres généraux",
     "generalDescription": "Configurez les préférences de votre compte",
+    "adminSettings": "Paramètres Globaux",
+    "adminSettingsDescription": "Configurer les paramètres système globaux (administrateurs uniquement)",
+    "organizationSettings": "Paramètres de l'Organisation",
+    "organizationSettingsDescription": "Configurer les paramètres de votre organisation",
+    "globalSettings": "Paramètres Globaux",
     "language": "Langue",
     "smtp": "SMTP",
     "smtpConfiguration": "Configuration SMTP",
@@ -547,6 +552,7 @@
     "templates": "Modèles",
     "organizations": "Organisations",
     "system": "Système",
+    "administrator": "Administrateur",
     "settings": "Paramètres",
     "expandSidebar": "Développer la barre latérale",
     "collapseSidebar": "Réduire la barre latérale",
