--- a/web/src/i18n/locales/it.json
+++ b/web/src/i18n/locales/it.json
@@ -258,6 +258,11 @@
     "general": "Generale",
     "generalSettings": "Impostazioni generali",
     "generalDescription": "Configura le preferenze del tuo account",
+    "adminSettings": "Impostazioni Globali",
+    "adminSettingsDescription": "Configura le impostazioni di sistema globali (solo amministratori)",
+    "organizationSettings": "Impostazioni Organizzazione",
+    "organizationSettingsDescription": "Configura le impostazioni della tua organizzazione",
+    "globalSettings": "Impostazioni Globali",
     "language": "Lingua",
     "smtp": "SMTP",
     "smtpConfiguration": "Configurazione SMTP",
@@ -548,6 +553,7 @@
     "templates": "Modelli",
     "organizations": "Organizzazioni",
     "system": "Sistema",
+    "administrator": "Amministratore",
     "settings": "Impostazioni",
     "expandSidebar": "Espandi barra laterale",
     "collapseSidebar": "Comprimi barra laterale",
