--- a/web/src/i18n/locales/pt.json
+++ b/web/src/i18n/locales/pt.json
@@ -246,6 +246,11 @@
   "settings": {
     "title": "Configurações",
     "description": "Configure sua conta, preferências e configurações do sistema",
+    "adminSettings": "Configurações Globais",
+    "adminSettingsDescription": "Configurar configurações globais do sistema (apenas administradores)",
+    "organizationSettings": "Configurações da Organização",
+    "organizationSettingsDescription": "Configurar configurações da sua organização",
+    "globalSettings": "Configurações Globais",
     "profile": "Perfil",
     "email": "E-mail",
     "storage": "Armazenamento",
@@ -547,6 +552,7 @@
     "templates": "Modelos",
     "organizations": "Organizações",
     "system": "Sistema",
+    "administrator": "Administrador",
     "settings": "Configurações",
     "expandSidebar": "Expandir barra lateral",
     "collapseSidebar": "Recolher barra lateral",
