--- a/web/src/i18n/locales/ru.json
+++ b/web/src/i18n/locales/ru.json
@@ -257,6 +257,11 @@
   "settings": {
     "title": "Настройки",
     "description": "Настройте свой аккаунт, предпочтения и системные параметры",
+    "adminSettings": "Глобальные настройки",
+    "adminSettingsDescription": "Настройка глобальных системных параметров (только для администраторов)",
+    "organizationSettings": "Настройки организации",
+    "organizationSettingsDescription": "Настройка параметров вашей организации",
+    "globalSettings": "Глобальные настройки",
     "profile": "Профиль",
     "email": "Email",
     "storage": "Хранилище",
@@ -593,6 +598,7 @@
     "templates": "Шаблоны",
     "organizations": "Организации",
     "system": "Система",
+    "administrator": "Администратор",
     "settings": "Настройки",
     "expandSidebar": "Развернуть боковую панель",
     "collapseSidebar": "Свернуть боковую панель",
