✨ feat(templates): field preferences, validation, number type, signing UX
Changes made in this commit:

- Modified: internal/models/template.go, internal/services/completed_document.go,
  pkg/pdf/certificate.go, pkg/pdf/render.go, web/src/assets/main.css,
  web/src/components/common/FieldInput.vue, web/src/components/field/Field.vue,
  web/src/components/field/List.vue, web/src/components/field/constants.ts,
  web/src/components/field/inputs/DateInput.vue, FileInput.vue, SelectInput.vue,
  SignatureInput.vue, web/src/components/template/Area.vue, Page.vue,
  web/src/components/ui/Checkbox.vue, Input.vue, Radio.vue,
  web/src/i18n/locales/*.json, web/src/models/template.ts,
  web/src/pages/Edit.vue, SubmitterSign.vue, View.vue,
  web/src/pages/settings/SettingsBranding.vue, web/src/utils/time.ts,
  web/vite.config.ts, docs/FRONTEND_COMPONENTS.md, docs/README.md
- Added: web/src/assets/svg/eye.svg, eye-off.svg, number.svg,
  web/src/components/ui/FileDropZone.vue

Key changes:

- Add FieldPreferences and FieldValidation (backend); Field title, readonly,
  validation as object or legacy string with UnmarshalJSON
- Add number field type; Areas gain cell_count, cell_w, option_id
- Add formatDateByPattern in time utils; date/signature format in FieldInput
- Add password visibility toggle to Input; FileDropZone component; i18n strings
- SubmitterSign: document field overlays with labels and filled values,
  expandable field list, prev/next nav, draft persistence, signature ID display
- PDF render and completed_document updates for new field model
- Update FRONTEND_COMPONENTS and README for field model and signing UX

--- a/web/src/i18n/locales/de.json
+++ b/web/src/i18n/locales/de.json
@@ -158,7 +158,15 @@
     "updateFailed": "Informationen konnten nicht aktualisiert werden",
     "drawSignature": "Unterschrift zeichnen",
     "drawInitials": "Initialen zeichnen",
+    "signatureDraw": "Zeichnen",
+    "signatureType": "Tippen",
+    "signatureUpload": "Hochladen",
+    "typeSignature": "Geben Sie Ihren vollständigen Namen ein",
+    "typeInitials": "Geben Sie Ihre Initialen ein",
+    "signatureId": "Signatur-ID",
+    "stampId": "Stempel-ID",
     "selectAtLeastOne": "Bitte wählen Sie mindestens eine Option aus",
+    "fillAllCells": "Füllen Sie alle Zellen mit jeweils einem Zeichen aus",
     "submissionNotFound": "Einreichung nicht gefunden",
     "submitFailed": "Senden fehlgeschlagen",
     "declineFailed": "Ablehnen fehlgeschlagen",
