--- a/web/src/i18n/locales/es.json
+++ b/web/src/i18n/locales/es.json
@@ -158,7 +158,15 @@
     "updateFailed": "No se pudo actualizar la información",
     "drawSignature": "Dibuje su firma",
     "drawInitials": "Dibuje sus iniciales",
+    "signatureDraw": "Dibujar",
+    "signatureType": "Escribir",
+    "signatureUpload": "Subir",
+    "typeSignature": "Escriba su nombre completo",
+    "typeInitials": "Escriba sus iniciales",
+    "signatureId": "ID de firma",
+    "stampId": "ID de sello",
     "selectAtLeastOne": "Seleccione al menos una opción",
+    "fillAllCells": "Rellene todas las celdas con un solo carácter en cada una",
     "submissionNotFound": "Envío no encontrado",
     "submitFailed": "No se pudo enviar",
     "declineFailed": "No se pudo rechazar",
