--- a/web/src/i18n/locales/fr.json
+++ b/web/src/i18n/locales/fr.json
@@ -158,7 +158,15 @@
     "updateFailed": "Échec de la mise à jour des informations",
     "drawSignature": "Dessinez votre signature",
     "drawInitials": "Dessinez vos initiales",
+    "signatureDraw": "Dessiner",
+    "signatureType": "Saisir",
+    "signatureUpload": "Télécharger",
+    "typeSignature": "Saisissez votre nom complet",
+    "typeInitials": "Saisissez vos initiales",
+    "signatureId": "ID de signature",
+    "stampId": "ID du cachet",
     "selectAtLeastOne": "Veuillez sélectionner au moins une option",
+    "fillAllCells": "Remplissez toutes les cellules avec un caractère dans chacune",
     "submissionNotFound": "Soumission introuvable",
     "submitFailed": "Échec de l'envoi",
     "declineFailed": "Échec du refus",
