--- a/web/src/i18n/locales/it.json
+++ b/web/src/i18n/locales/it.json
@@ -158,7 +158,15 @@
     "updateFailed": "Impossibile aggiornare le informazioni",
     "drawSignature": "Disegna la tua firma",
     "drawInitials": "Disegna le tue iniziali",
+    "signatureDraw": "Disegna",
+    "signatureType": "Digita",
+    "signatureUpload": "Carica",
+    "typeSignature": "Digita il tuo nome completo",
+    "typeInitials": "Digita le tue iniziali",
+    "signatureId": "ID firma",
+    "stampId": "ID timbro",
     "selectAtLeastOne": "Seleziona almeno un'opzione",
+    "fillAllCells": "Compila tutte le celle con un carattere in ciascuna",
     "submissionNotFound": "Invio non trovato",
     "submitFailed": "Invio non riuscito",
     "declineFailed": "Rifiuto non riuscito",
