--- a/web/src/i18n/locales/pt.json
+++ b/web/src/i18n/locales/pt.json
@@ -158,7 +158,15 @@
     "updateFailed": "Falha ao atualizar informações",
     "drawSignature": "Desenhe sua assinatura",
     "drawInitials": "Desenhe suas iniciais",
+    "signatureDraw": "Desenhar",
+    "signatureType": "Digitar",
+    "signatureUpload": "Enviar arquivo",
+    "typeSignature": "Digite seu nome completo",
+    "typeInitials": "Digite suas iniciais",
+    "signatureId": "ID da assinatura",
+    "stampId": "ID do carimbo",
     "selectAtLeastOne": "Selecione pelo menos uma opção",
+    "fillAllCells": "Preencha todas as células com um caractere em cada uma",
     "submissionNotFound": "Envio não encontrado",
     "submitFailed": "Falha ao enviar",
     "declineFailed": "Falha ao recusar",
