--- a/web/src/i18n/locales/ru.json
+++ b/web/src/i18n/locales/ru.json
@@ -12,7 +12,7 @@
     "submit": "Отправить",
     "close": "Закрыть",
     "back": "Назад",
-    "next": "Далее",
+    "next": "Следующий",
     "previous": "Предыдущий",
     "search": "Поиск",
     "filter": "Фильтр",
@@ -159,7 +159,15 @@
     "updateFailed": "Не удалось обновить информацию",
     "drawSignature": "Нарисуйте подпись",
     "drawInitials": "Нарисуйте инициалы",
+    "signatureDraw": "Рисовать",
+    "signatureType": "Печать",
+    "signatureUpload": "Загрузить",
+    "typeSignature": "Введите полное имя",
+    "typeInitials": "Введите инициалы",
+    "signatureId": "ID подписи",
+    "stampId": "ID печати",
     "selectAtLeastOne": "Выберите хотя бы один вариант",
+    "fillAllCells": "Заполните все ячейки по одному символу в каждой",
     "submissionNotFound": "Отправка не найдена",
     "submitFailed": "Не удалось отправить",
     "declineFailed": "Не удалось отклонить",
