✨ feat(editor): improve conditional logic and formula UI, fix formula validation for UUIDs
Changes made in this commit:
- Modified: docs/CONDITIONAL_FIELDS.md, docs/FORMULAS.md
- Modified: internal/services/formula/validator.go
- Modified: web/src/components/field/ConditionBuilder.vue, Field.vue, FormulaBuilder.vue
- Modified: web/src/i18n/locales/de.json, en.json, es.json, fr.json, it.json, pt.json, ru.json

Key changes:
- Fix Conditional Logic and Formula modals not opening (ref handling, nextTick, open/close helpers)
- Filter available fields by active submitter in Condition and Formula builders
- Show field display names in dropdowns (getDefaultFieldName, displayName prop)
- Redesign Conditional Logic UI: rule groups, grid layout, delete at bottom, empty state, i18n keys
- Redesign Formula UI: description, sections, display formula with [[Field Name]] while storing IDs
- Add formula i18n keys (description, expression, noFields) to all locales
- Add condition i18n keys (description, empty, rule, then, thisField) to all locales
- Backend: treat UUIDs as single field refs in formula validation (extractFieldReferences)
- Backend: rewrite UUIDs to placeholders before expr compile/eval to fix hyphen-as-minus parse error

--- a/web/src/i18n/locales/de.json
+++ b/web/src/i18n/locales/de.json
@@ -95,6 +95,11 @@
     "validation": "Validierung",
     "conditions": {
       "title": "Bedingte Logik",
+      "description": "Legen Sie fest, wann dieses Feld je nach anderen Feldern angezeigt, ausgeblendet, erforderlich oder deaktiviert wird.",
+      "empty": "Noch keine Regeln.",
+      "rule": "Regel",
+      "then": "dann",
+      "thisField": "dieses Feld",
       "and": "UND",
       "or": "ODER",
       "equals": "Gleich",
@@ -116,11 +121,14 @@
     },
     "formula": {
       "title": "Formel",
+      "description": "Nutzen Sie Feld-IDs und Operatoren für die Berechnung. Klicken Sie auf Felder und Funktionen unten zum Einfügen.",
+      "expression": "Formel",
       "placeholder": "Formel eingeben (z.B. field_1 + field_2)",
       "preview": "Vorschau",
       "insertField": "Feld einfügen",
       "functions": "Funktionen",
-      "examples": "Beispiele"
+      "examples": "Beispiele",
+      "noFields": "Keine Zahl- oder Textfelder verfügbar."
     }
   },
   "signing": {
