--- a/web/src/i18n/locales/ru.json
+++ b/web/src/i18n/locales/ru.json
@@ -96,6 +96,11 @@
     "validation": "Валидация",
     "conditions": {
       "title": "Условная логика",
+      "description": "Укажите, когда это поле показывать, скрывать, делать обязательным или отключать в зависимости от других полей.",
+      "empty": "Правил пока нет.",
+      "rule": "Правило",
+      "then": "то",
+      "thisField": "это поле",
       "and": "И",
       "or": "ИЛИ",
       "equals": "Равно",
@@ -117,11 +122,14 @@
     },
     "formula": {
       "title": "Формула",
+      "description": "Используйте идентификаторы полей и операторы для вычисления. Вставляйте поля и функции кликом ниже.",
+      "expression": "Формула",
       "placeholder": "Введите формулу (например, field_1 + field_2)",
       "preview": "Предпросмотр",
       "insertField": "Вставить поле",
       "functions": "Функции",
-      "examples": "Примеры"
+      "examples": "Примеры",
+      "noFields": "Нет доступных полей типа число или текст."
     }
   },
   "signing": {
