✨ feat(submissions): improve create submission modal and signing mode UX
Changes made in this commit:
- Modified: docs/FRONTEND_COMPONENTS.md, internal/handlers/api/signing_links.go,
  web/src/components/field/List.vue, web/src/components/field/SigningModeSelector.vue,
  web/src/i18n/locales/de.json, en.json, es.json, fr.json, it.json, pt.json, ru.json,
  web/src/pages/Edit.vue, web/src/pages/Submissions.vue
- Added: (none)
- Deleted: (none)

Key changes:
- Align create submission modal with design principles (FormControl, description, footer slot, tokens)
- Replace Create links button with Save (common.save) in submission modal
- SigningModeSelector: always visible (no collapse), Parallel first and default, remove container styling
- Add hideOrderList prop; in Submissions use draggable signer cards for Sequential order with drop indicator
- Full i18n for SigningModeSelector (signingMode.* in all 7 locales)
- Add submissions.createDescription, createLinks, signersOrderDragHint; Signing Mode copy in i18n
- Update FRONTEND_COMPONENTS.md: SigningModeSelector, Submissions create modal description

--- a/web/src/i18n/locales/de.json
+++ b/web/src/i18n/locales/de.json
@@ -187,6 +187,18 @@
     "copyAllLinks": "Alle Links kopieren",
     "sendEachLinkHint": "Senden Sie jeden Link über einen beliebigen Kanal an den jeweiligen Unterzeichner."
   },
+  "signingMode": {
+    "title": "Unterschriftsmodus",
+    "parallel": "Parallel",
+    "parallelTitle": "Parallele Unterzeichnung",
+    "parallelDescription": "Alle Unterzeichner erhalten gleichzeitig eine Einladung und können in beliebiger Reihenfolge unterschreiben.",
+    "sequential": "Sequenziell",
+    "sequentialTitle": "Sequenzielle Unterzeichnung",
+    "sequentialDescription": "Unterzeichner unterschreiben nacheinander. Jede Person erhält die Einladung erst nach der Unterzeichnung durch die vorherige Person.",
+    "orderTitle": "Reihenfolge der sequenziellen Unterzeichnung",
+    "orderHint": "Unterzeichner unterschreiben in der unten angezeigten Reihenfolge. Zum Ändern per Drag & Drop ziehen.",
+    "signingOrder": "Unterzeichnungsreihenfolge"
+  },
   "submissions": {
     "title": "Einreichungen",
     "description": "Verwalten und verfolgen Sie alle Ihre Dokumenteneinreichungen",
