--- a/web/src/i18n/locales/ru.json
+++ b/web/src/i18n/locales/ru.json
@@ -188,10 +188,24 @@
     "copyAllLinks": "Скопировать все ссылки",
     "sendEachLinkHint": "Отправьте каждую ссылку соответствующему подписанту любым удобным способом."
   },
+  "signingMode": {
+    "title": "Режим подписания",
+    "parallel": "Параллельно",
+    "parallelTitle": "Параллельное подписание",
+    "parallelDescription": "Все подписанты получают приглашения одновременно и могут подписывать в любом порядке.",
+    "sequential": "Последовательно",
+    "sequentialTitle": "Последовательное подписание",
+    "sequentialDescription": "Подписанты подписывают по очереди. Каждый получает приглашение только после подписания предыдущим.",
+    "orderTitle": "Порядок последовательного подписания",
+    "orderHint": "Подписанты будут подписывать в порядке, указанном ниже. Перетащите элементы для изменения порядка.",
+    "signingOrder": "Порядок подписания"
+  },
   "submissions": {
     "title": "Отправки",
     "description": "Управляйте и отслеживайте все ваши отправки документов",
     "create": "Создать отправку",
+    "createDescription": "Выберите шаблон и укажите подписантов, чтобы создать ссылки на подписание.",
+    "createLinks": "Создать ссылки",
     "edit": "Редактировать отправку",
     "delete": "Удалить отправку",
     "send": "Отправить",
@@ -213,7 +227,13 @@
     "selectTemplateRequired": "Пожалуйста, выберите шаблон",
     "invalidTemplateSubmitters": "Подписанты в шаблоне настроены некорректно",
     "saveFailed": "Не удалось сохранить отправку",
-    "placeholder": "Договор для Ивана Иванова"
+    "placeholder": "Договор для Ивана Иванова",
+    "signers": "Подписанты",
+    "signerName": "Имя",
+    "signerEmail": "Email",
+    "signerPhone": "Телефон",
+    "signersHint": "Количество подписантов задаётся выбранным шаблоном.",
+    "signersOrderDragHint": "В последовательном режиме порядок подписания можно изменить перетаскиванием карточек."
   },
   "dashboard": {
     "title": "Панель управления",
